--- a/app/components/OurTeamHearder.module.css
+++ b/app/components/OurTeamHearder.module.css
@@ -9,7 +9,7 @@
   height: 300px;
   color: white;
   margin-top: -10px;
-  margin-bottom: 20px;
+  margin-bottom: 5%;
 }
 .main {
   display: flex;
